# node-screen-capture

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  CHANGELOG.md  Cargo.toml  README.md  build.rs  index.d.ts  index.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  simple-test.js  tsconfig.json  tsdown.config.mts  vitest.config.ts
.github/workflows/: CI.yml
examples/: capture-screenshot.js  discover-sources.js  stream-frames.js  windows-dxgi-screenshot.js  windows-record-video.js
lib/: ScreenCaptureHelper.swift  common.rs  lib.rs  linux_binding.rs  macos_binding.rs  windows_binding.rs
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
scripts/: capture-smoke.js  simple-test.js
src/: frame-queue.ts  index.ts  lib.rs  windows_binding.rs
test/: frame-queue.test.ts
test/integration/: capture.test.ts
test/unit/: frame-queue.test.ts  index.test.ts  native-binding.test.ts
