
[package]
edition = "2024"
name = "native_capture_node"
version = "1.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.0.0", features = ["async"] }
napi-derive = "3.0.0"

[target.'cfg(windows)'.dependencies]
windows-capture-rs = { package = "windows-capture", version = "2.0.0" }
windows = { version = "0.62.2", features = [
  "Storage_Streams",
  "Win32_Foundation",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
