
[package]
edition = "2024"
name = "screen_capture_node"
version = "1.0.0"

[lib]
crate-type = ["cdylib"]
path = "lib/lib.rs"

[dependencies]
napi-derive = "3.0.0"

[dependencies.napi]
version = "3.0.0"
features = ["async"]

[target."cfg(windows)".dependencies.windows-capture-rs]
package = "windows-capture"
version = "2.0.0"

[target."cfg(windows)".dependencies.windows]
version = "0.62.2"
features = ["Storage_Streams","Win32_Foundation","Win32_System_Performance","Win32_System_Threading","Win32_UI_WindowsAndMessaging"]

[target."cfg(target_os = \"linux\")".dependencies]
pipewire = "0.10.0"

[target."cfg(target_os = \"linux\")".dependencies.ashpd]
version = "0.13.12"
default-features = false
features = ["screencast","tokio"]

[target."cfg(target_os = \"linux\")".dependencies.image]
version = "0.25.10"
default-features = false
features = ["bmp","gif","jpeg","png","tiff"]

[target."cfg(target_os = \"linux\")".dependencies.tokio]
version = "1.51"
features = ["macros","rt","time"]


[target."cfg(target_os = \"macos\")".dependencies.screencapturekit]
version = "8.0.0"
features = ["macos_14_0"]

[target."cfg(target_os = \"macos\")".dependencies.image]
version = "0.25.10"
default-features = false
features = ["bmp","gif","jpeg","png","tiff"]

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
